syntax = "proto3";
package proto;
option go_package = "github.com/THPTUHA/kairos/storage/sstables/proto";

message IndexEntry {
    bytes key = 1;
    uint64 valueOffset = 2;
}


message MetaData {
    uint64 numRecords = 1;
    bytes minKey = 2;
    bytes maxKey = 3;
    uint64 dataBytes = 4;
    uint64 indexBytes = 5;
    uint64 totalBytes = 6;
    uint32 version = 7; 
}
